addrd 0 and 66 order, doors appear back, other stuff
Former-commit-id: 313de5dcd23959fe5b49cd15efd77a4b99dd3905

--- a/www/assets/json/tasks/kitchen_tasks.json
+++ b/www/assets/json/tasks/kitchen_tasks.json
@@ -33,12 +33,12 @@
                 },
                 {
                     "item": "",
-                    "category": "edible",
+                    "category": "fruit",
                     "order": 1
                 },
                 {
                     "item": "",
-                    "category": "fruit",
+                    "category": "edible",
                     "order": 1
                 }
             ]
@@ -512,7 +512,7 @@
                     "order": 1
                 },
                 {
-                    "item": "egg",
+                    "item": "agg",
                     "category": "",
                     "order": 1
                 },
